# fastcrud

./: README.md  main.py  pyproject.toml
__pycache__/: .gitignore
core/: .env  base.py  db.py  security.py  users.py
logs/: .gitignore
