[project]
name = "fast_crud"
version = "0.1.0"
description = "Simple user crud with FastAPI + Postgresql"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=3.2,<4.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "nanoid>=2.0.0",
    "passlib>=1.7.4",
    "psycopg-pool>=3.2.6",
    "psycopg[c]>=3.2.10",
    "pydantic[email]>=2.11.9",
    "python-multipart>=0.0.20",
    "regex>=2025.9.1",
    "rich>=14.1.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
